styling problem with gallery on mobile and fixed bug on editHistory

--- a/styling/gallery.css
+++ b/styling/gallery.css
@@ -1,7 +1,7 @@
 body,
 html {
   background-color: var(--primary-color);
-  min-width: 430px;
+  width: 100vw;
   min-height: 100vh;
 }
 .container {
@@ -32,7 +32,6 @@ html {
   align-items: center;
   text-decoration: none;
   margin: 10px;
-  width: 330px;
   min-height: 330px;
   background-color: var(--secundary-color);
   border-radius: 25px;
